3/vault-openshift-integration/h2-console-java-spring-app-with-vault-secrets/.openshift/base/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: vault-demo
  namespace: dev
  labels:
    app: vault-demo
    app.kubernetes.io/component: vault-demo
    app.kubernetes.io/instance: vault-demo
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  selector:
    deployment: vault-demo
